--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/yavorp/js-chatbot/issues"
   },
-  "homepage": "https://github.com/yavorp/js-chatbot#readme"
+  "homepage": "https://github.com/yavorp/js-chatbot#readme",
+  "dependencies": {
+    "@types/express": "^4.17.7",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
+  }
 }
