--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/yavorp/js-chatbot#readme",
   "dependencies": {
+    "@slack/events-api": "^2.3.4",
+    "@slack/web-api": "^5.11.0",
     "@types/express": "^4.17.7",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.7"
   }
 }
