--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "knex": "^0.21.5",
     "nodemon": "^2.0.4",
+    "objection": "^2.2.3",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7"
   }
